Opened 9 years ago
Closed 9 years ago
#12573 closed bug (fixed)
MediaPlayer Timeline ToolTip - Wrong Color
Reported by: | looncraz | Owned by: | jessicah |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/MediaPlayer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Attachments (3)
Change History (11)
by , 9 years ago
Attachment: | Bitmap Clip.png added |
---|
comment:1 by , 9 years ago
Component: | - General → Applications/MediaPlayer |
---|---|
Description: | modified (diff) |
Milestone: | Unscheduled → R1 |
Owner: | changed from | to
by , 9 years ago
Attachment: | MediaPlayer-PositionToolTip-Color.patch added |
---|
comment:2 by , 9 years ago
patch: | 0 → 1 |
---|
follow-up: 6 comment:3 by , 9 years ago
Instead of manually specifying the colours, a call to AdoptParentColours() in AttachedToWindows() should be used. This is what your new API function is designed for! I have tested this myself in parallel to your patch ;-)
comment:4 by , 9 years ago
patch: | 1 → 0 |
---|
comment:5 by , 9 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:6 by , 9 years ago
Replying to jessicah:
Instead of manually specifying the colours, a call to AdoptParentColours() in AttachedToWindows() should be used. This is what your new API function is designed for! I have tested this myself in parallel to your patch ;-)
Good point!
This also informed me as to why this didn't do it by itself.
The patch will be uploaded momentarily!
comment:7 by , 9 years ago
patch: | 0 → 1 |
---|
comment:8 by , 9 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Applied in hrev50008. Thanks!
Image by kim1963